Image aligned and correction

--- a/style.css
+++ b/style.css
@@ -5,8 +5,25 @@ div{
     border-radius: 20px;
     color: white;
     text-align: center;
+    height: auto;
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Arial;
 
 }
 #port{
     text-align: center;
 }
+#center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   
+}
+img {
+ width: auto;
+ height: 490px;
+ border-radius: 20px;
+}
+
